--- a/index.html
+++ b/index.html
@@ -9,38 +9,38 @@
 <html lang="en">
 
 <head>
+    <section>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" type="image/png" href="img/favicon2.png">
+        <title>Akshant Jain | Web Designer and Software Developer</title>
 
-    <title>Akshant Jain | Web Designer and Software Developer</title>
+        <!-- Bootstrap core CSS -->
+        <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!-- Bootstrap core CSS -->
-    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- Custom fonts for this template -->
+        <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/main_style.css" rel="stylesheet">
-    <link href="css/about_style.css" rel="stylesheet">
-    <link href="css/contact_style.css" rel="stylesheet">
-    <link href="css/experience_style.css" rel="stylesheet">
-    <link href="css/footer_style.css" rel="stylesheet">
-    <link href="css/masthead_style.css" rel="stylesheet">
-    <link href="css/navbar_style.css" rel="stylesheet">
-    <link href="css/projects_style.css" rel="stylesheet">
-    <link href="css/signup_style.css" rel="stylesheet">
-    <link href="css/skills_style.css" rel="stylesheet">
-    <!-- <link href="css/style.css" rel="stylesheet"> -->
-
+        <!-- Custom styles for this template -->
+        <link href="css/main_style.css" rel="stylesheet">
+        <link href="css/about_style.css" rel="stylesheet">
+        <link href="css/contact_style.css" rel="stylesheet">
+        <link href="css/experience_style.css" rel="stylesheet">
+        <link href="css/footer_style.css" rel="stylesheet">
+        <link href="css/masthead_style.css" rel="stylesheet">
+        <link href="css/navbar_style.css" rel="stylesheet">
+        <link href="css/projects_style.css" rel="stylesheet">
+        <link href="css/signup_style.css" rel="stylesheet">
+        <link href="css/skills_style.css" rel="stylesheet">
+        <!-- <link href="css/style.css" rel="stylesheet"> -->
+    </section>
 </head>
 
 <body id="page-top">
@@ -80,7 +80,7 @@
     <!-- Header -->
     <header class="masthead">
         <div class="container d-flex h-75 align-items-center pt-5">
-            <div class="mx-auto text-center pb-1">
+            <div class="mx-auto text-center">
                 <h1 class="mx-auto text-uppercase text-white">Akshant Jain</h1>
                 <div class="divider" style="background-color: transparent;"></div>
                 <h2 class="text-white mx-auto">Aspiring Software Developer and Web Designer</h2>
@@ -145,6 +145,12 @@
     <section id="skills" class="skill-section contents ">
         <div id="container" class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-3">Courserowk and Skills</h1>
+            <div class="row m-3">
+                <div class="wrapper">
+                    <p class="name text-white mb-2" style=" font-family: 'Source Sans Pro', sans-serif;"></p>
+                    <span class="line mt-0 mb-4"></span>
+                </div>
+            </div>
         </div>
         <div class="container d-flex h-25 align-items-end">
             <div class="mx-auto text-center skills mt-1" id="scroll">
