--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@ Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-coming-so
                         <p class="mb-5">I'm working hard to finish the development of the new version of this site. Expected launch date is
                             <strong>May 2020 or Sooner</strong>!
                         </p>
+                        <p>Till then, I would welcome you to have a look at the <a class="link text-white" href="https://akshantjain.github.io/v1">previous version of my personal website</a>.</p>
+                        <a href="https://akshantjain.github.io/v1">
+                            <img src="images/favicon.png" style="width: 100px; height: auto;">
+                        </a>
                     </div>
                 </div>
             </div>
