--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
         <!-- Custom styles for this template -->
         <link href="css/main_style.css" rel="stylesheet">
@@ -39,7 +40,6 @@
         <link href="css/projects_style.css" rel="stylesheet">
         <link href="css/signup_style.css" rel="stylesheet">
         <link href="css/skills_style.css" rel="stylesheet">
-        <!-- <link href="css/style.css" rel="stylesheet"> -->
     </section>
 </head>
 
@@ -144,11 +144,62 @@
     <!-- Coursework & Skills Section -->
     <section id="skills" class="skill-section contents ">
         <div id="container" class="container-fluid">
-            <h1 class="text-left text-uppercase heads mb-3">Courserowk and Skills</h1>
-            <div class="row m-3">
-                <div class="wrapper">
-                    <p class="name text-white mb-2" style=" font-family: 'Source Sans Pro', sans-serif;"></p>
-                    <span class="line mt-0 mb-4"></span>
+            <h1 class="text-left text-uppercase heads mb-2">Courserowk and Skills</h1>
+            <div class="row m-auto">
+                <div class="wrapper mb-4 mt-3">
+                    <div class="row mt-4 mb-3 pl-3 container-fluid do_center">
+                        <div class="img idea"></div>
+                        <h4 class="text-uppercase d-inline-block text-white">knowledge: </h4>
+                        <i class="devicon-java-plain-wordmark java"></i>
+                        <i class="devicon-cplusplus-plain cplusplus"></i>
+                        <i class="fab fa-python python"></i>
+                        <i class="devicon-mysql-plain-wordmark mysql"></i>
+                        <i class="devicon-android-plain-wordmark android"></i>
+                        <i class="fab fa-html5 html"></i>
+                        <i class="fab fa-css3-alt css"></i>
+                        <i class="fab fa-js javascript"></i>
+                        <i class="fab fa-bootstrap bootstrap"></i>
+                        <i class="devicon-github-plain-wordmark git"></i>
+                    </div>
+                    <span class="line line-center line2" style="width: 80%; height: 1px;"></span>
+                    <div class=" mt-5 row">
+                        <div class="col pt-4 pl-5 pr-3 pb-2 text-white border-right border-bottom border-secondary ">
+                            <div class="img code"></div>
+                            <h4 class="text-uppercase d-inline-block">computer science (UIC)<span class="line" style="width: 80%;"></span></h4>
+                            <p class="para pt-2 pl-2 pr-2 text-white-50">
+                                Using Programming languages like Java, C++, etc. along with web development, 
+                                I am passionate about combining these two different developments to develop new softwares and programs to enhance
+                                user experience and make provide more functionalities.
+                            </p>
+                        </div>
+                        <div class="col pt-4 pl-5 pr-3 pb-2 text-white border-bottom border-secondary">
+                            <div class="img skill"></div>
+                            <h4 class="text-uppercase d-inline-block">Skills<span class="line" style="width: 80%;"></span></h4>
+                            <p class="para pt-2 pl-2 pr-2 text-white-50">
+                                While pursiung my bachelor's degree, I have come acroos different programming languages as well as web languages.
+                                I have a good experience with programming languages namely JAVA, C++, Python, SQL, and web languages like HTML, CSS, JavaScript and Bootstrap.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col pb-2 pl-5 pr-3 pt-5 text-white border-right border-secondary">
+                            <div class="img math"></div>
+                            <h4 class="text-uppercase d-inline-block">Mathematics<span class="line" style="width: 80%;"></span></h4>
+                            <p class="para pt-2 pl-2 pr-2 text-white-50">
+                                Along with pursing my computer science degree, I also opted for mathematics as a minor. I love solving math problems in my free time and also love to help
+                                my peers and solve problems with them.
+                            </p>
+                        </div>
+                        <div class="col pb-2 pl-5 pr-3 pt-5 text-white">
+                            <div class="img tech"></div>
+                            <h4 class="text-uppercase d-inline-block">Tools and Technologies<span class="line" style="width: 80%;"></span></h4>
+                            <p class="para pt-2 pl-2 pr-2 text-white-50">
+                                Coming across the number of languages, I know some tools and technologies like Github, Git, Chrome Dev Tools, etc. 
+                                I am trying to know about some more technologies using which I could have some better programming experience
+                                and help my peers to use them as well. 
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -165,7 +216,7 @@
     <!-- Projects Section -->
     <section id="projects" class="projects-section contents">
         <div id="container" class="container-fluid">
-            <h1 class="text-left text-uppercase heads mb-3">Projects</h1>
+            <h1 class="text-left text-uppercase heads mb-5">Projects</h1>
         </div>
         <!-- <div class="my-4">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -282,7 +333,7 @@
     </section>
 
     <!-- Experience Section -->
-    <section id="experience" class="skill-section contents ">
+    <section id="experience" class="experience-section contents ">
         <div id="container" class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-3">Experience</h1>
         </div>
