--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container-fluid mx-3">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Akshant Jain</a>
+            <a class="navbar-brand js-scroll-trigger ml-1" href="#page-top"><img class="main-logo" src="img/favicon.png"></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -142,8 +142,8 @@
     </section>
 
     <!-- Coursework & Skills Section -->
-    <section id="skills" class="skill-section contents ">
-        <div id="container" class="container-fluid">
+    <section id="skills" class="skill-section contents" data-0="background-position:0px -1050px;" data-100000="background-position:0px -10000px;">
+        <div id="skrollr-body" class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Courserowk and Skills</h1>
             <div class="row m-auto">
                 <div class="wrapper mb-4 mt-3">
@@ -502,6 +502,14 @@
         <!-- Custom scripts for this template -->
         <script src="js/script.js"></script>
         <script src="js/navbar.js"></script>
+
+        <script type="text/javascript" src="js/skrollr.min.js"></script>
+        <script type="text/javascript">
+            skrollr.init({
+                forceHeight: false
+            });
+        </script>
+
     </section>
 
 </body>
