--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
     </section>
 
     <!-- Coursework & Skills Section -->
-    <section id="skills" class="skill-section contents" data-0="background-position:0px -1050px;" data-100000="background-position:0px -10000px;">
+    <section id="skills" class="skill-section contents" data-0="background-position:0px -1100px;" data-100000="background-position:0px -10000px;">
         <div id="skrollr-body" class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Courserowk and Skills</h1>
             <div class="row m-auto">
                 <div class="wrapper mb-4 mt-3">
                     <div class="row mt-4 mb-3 pl-3 container-fluid do_center">
                         <div class="img idea"></div>
-                        <h4 class="text-uppercase d-inline-block text-white">knowledge: </h4>
+                        <h4 class="text-uppercase d-inline-block text-white">knowledge: <span class="line" style="width: 80%;"></span></h4>
                         <i class="devicon-java-plain-wordmark java"></i>
                         <i class="devicon-cplusplus-plain cplusplus"></i>
                         <i class="fab fa-python python"></i>
