--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-        <title>Akshant Jain | Web Designer and Software Developer</title>
+        <title>Akshant Jain | Software and Front End Developer</title>
 
         <!-- Bootstrap core CSS -->
         <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -83,7 +83,7 @@
             <div class="mx-auto text-center">
                 <h1 class="mx-auto text-uppercase text-white">Akshant Jain</h1>
                 <div class="divider" style="background-color: transparent;"></div>
-                <h2 class="text-white mx-auto">Aspiring Software Developer and Web Designer</h2>
+                <h2 class="text-white mx-auto">Aspiring Software and Front End Developer</h2>
             </div>
         </div>
         <div class="container d-flex h-25  pb-5 align-items-end" id="button-container">
