--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <link href="css/projects_style.css" rel="stylesheet">
         <link href="css/signup_style.css" rel="stylesheet">
         <link href="css/skills_style.css" rel="stylesheet">
+        <link href="css/resume_style.css" rel="stylesheet">
     </section>
 </head>
 
@@ -713,117 +714,13 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- <div class="my-4">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1" class=""></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active" id="home_security">
-                        <div class="carousel-caption d-none d-md-block"  style="top: 0;">
-                            <div class="container">
-                                <a class="repo-button" href="https://github.com/Akshantjain/Home-Security-System/tree/master/code" target="_blank">
-                                    <span class="fa fa-code pr-2 py-2 mr-1" style="border-right: 0.1rem solid #64a19d;"></span>
-                                    CODE
-                                </a>
-                                <a class="repo-button mr-3" href="https://github.com/Akshantjain/Home-Security-System/tree/master/code" target="_blank">
-                                    <span class="fa fa-shopping-cart pr-2 py-2 mr-1" style="border-right: 0.1rem solid #64a19d;"></span>
-                                    ARDUINO KIT
-                                </a>
-                            </div>
-                            <h3 class="titles">Home Security System</h3>
-                            <p class="duration pr-5 mr-4">September - December 2019</p>
-                            <div class="description text-justify">
-                                <ul>
-                                    <li>This project is a part of <em>Computer Design Course</em> (CS 362) of UIC from <em>Fall 2019</em> Semester.</li>
-                                    <li>This was a group project of three members. </li>
-                                    <li>The main idea of the project was to design and create a prototype of home security system.</li>
-                                    <li>The prototype is able to detect threats which could take place in a house in your absence.</li>
-                                    <li>Potential threats which system could detect includes theft, invade, smoke, fire, gas andlights.</li>
-                                    <li>The system is protected by a password which is you need to set every time you enable the system.</li>
-                                    <li>The security system is coded in C++ on Arduino and other hardwares.</li>
-                                </ul>
-                            </div>
-
-                            <div class="mb-4 ml-3">
-                                <p class="m-0 mb-1 p-0 text-left"><span class="fa fa-tools px-1 "></span>Hardware and Concepts used:</p>
-                                <div class="horizontal-scroll px-2">
-                                    <a target="_blank" href="https://learn.sparkfun.com/tutorials/what-is-an-arduino/all">Arduino UNO (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/Tutorial/MasterWriter">I2C
-                                        Communication</a>
-                                    <a target="_blank" href="https://learn.adafruit.com/lesson-0-getting-started/breadboard">
-                                        BreadBoard (3)</a>
-                                    <a target="_blank" href="https://learn.pimoroni.com/tutorial/170pt-projects/anatomy-of-a-mini-breadboard">
-                                        Mini BreadBoard (1)</a>
-                                    <a target="_blank" href="https://en.wikipedia.org/wiki/Nine-volt_battery"> Batteries (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/Tutorial/HelloWorld"> 16x2 LCD Display
-                                        (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/tutorial/blink"> LED Lights (4)</a>
-                                    <a target="_blank" href="https://www.instructables.com/id/How-to-use-a-photoresistor-or-photocell-Arduino-Tu/">
-                                        Photoresistor (1)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/tutorial/potentiometer"> Potentiometer
-                                        (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/tutorial/button"> Pin Buttons (2)</a>
-                                    <a target="_blank" href="https://www.tutorialspoint.com/arduino/arduino_ultrasonic_sensor.htm">Ultrasonic
-                                        Sensor (1)</a>
-                                    <a target="_blank" href="https://playground.arduino.cc/Code/Keypad/">4x4 Keypad (1)</a>
-                                    <a target="_blank"
-                                        href="https://create.arduino.cc/projecthub/Aritro/smoke-detection-using-mq-2-gas-sensor-79c54a">Smoke
-                                        Sensor (1)</a>
-                                    <a target="_blank"
-                                        href="https://create.arduino.cc/projecthub/SURYATEJA/use-a-buzzer-module-piezo-speaker-using-arduino-uno-89df45">
-                                        Buzzers (3)</a>
-                                    <a target="_blank" href="https://www.arduino.cc/en/reference/wire"> Connecting Wires
-                                        (~40)</a>
-                                    <a target="_blank" href="https://learn.adafruit.com/adafruit-arduino-lesson-2-leds/resistors"> Resistors
-                                        (8)</a>
-                                </div>
-                            </div>
-                            <div class="mb-4 ml-3">
-                                <p class="m-0 mb-1 p-0 text-left"><span class="px-1 fa fa-file-alt"></span>Project Documents:</p>
-                                <div class="horizontal-scroll px-2">
-                                    <a href="http://bit.ly/2SZ3C83" target="_blank">Initial Team and Idea</a>
-                                    <a href="http://bit.ly/3c8AoeG" target="_blank">Team and Project Contract</a>
-                                    <a href="http://bit.ly/2wIGSAx" target="_blank">Updated Design Document</a>
-                                    <a href="http://bit.ly/2SY0FEQ" target="_blank">Project Presentation</a>
-                                    <a href="http://bit.ly/2PrJo4V" target="_blank">Final Design Document</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="home_security">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Second Slide</h3>
-                            <p class="duration">This is a description for the second slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item" id="home_security">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Third Slide</h3>
-                            <p>This is a description for the third slide.</p>
-                        </div>
-                    </div>
+            <div class="container d-flex h-25 align-items-end" id="">
+                <div class="mx-auto text-center skills mt-1" id="scroll">
+                    <a href="#experience" class="btn btn-primary bg-transparent js-scroll-trigger">
+                        <span></span>
+                        <p class="shining">Experience</p>
+                    </a>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>   -->
-
-        <div class="container d-flex h-25 align-items-end" id="">
-            <div class="mx-auto text-center skills mt-1" id="scroll">
-                <a href="#experience" class="btn btn-primary bg-transparent js-scroll-trigger">
-                    <span></span>
-                    <p class="shining">Experience</p>
-                </a>
             </div>
         </div>
     </section>
@@ -843,6 +740,12 @@
         </div>
     </section>
 
+    <!-- Resume Section -->
+    <!-- Taken from bchiang7.github.io/v2 -->
+    <a class="block-btn" href="https://www.github.com/akshantjain" target="_blank"> <span class="text">View my full resume</span> 
+        <img class="icon" src="img/download.png" alt="download resume">
+    </a>
+    
     <!-- Signup Section -->
     <!-- <section id="signup" class="signup-section">
         <div class="container">
@@ -1008,6 +911,16 @@
 
         <script src="js/projects.js"></script>
         <script src="js/logochange.js"></script>
+
+        <script>
+            function resumein () {
+
+            }
+
+            function resumeout ()   {
+
+            }
+        </script>
 
     </section>
 
