--- a/index.html
+++ b/index.html
@@ -742,9 +742,12 @@
 
     <!-- Resume Section -->
     <!-- Taken from bchiang7.github.io/v2 -->
-    <a class="block-btn" href="https://www.github.com/akshantjain" target="_blank"> <span class="text">View my full resume</span> 
-        <img class="icon" src="img/download.png" alt="download resume">
-    </a>
+    <section id="resume">
+        <a class="block-btn" href="https://www.github.com/akshantjain" target="_blank"> <span class="text">View my full
+                resume</span>
+            <img class="icon" src="img/download.png" alt="download resume">
+        </a>
+    </section>
     
     <!-- Signup Section -->
     <!-- <section id="signup" class="signup-section">
