--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-coming-so
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+    <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
 
     <title>In Development</title>
 
