--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <section>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="author" content="Akshant Jain">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
+
+        <meta name="description"
+            content="Computer Science Student, Aspiring Software and Front End Developer">
+        <meta name="keywords" content="design, development, web, akshantjain, akshant, jain, software, student, senior">
 
         <title>Akshant Jain | Software and Front End Developer</title>
 
@@ -126,12 +130,7 @@
                     cursus finibus tellus ac congue. Cras luctus consequat enim, ac vehicula risus. Sed a nisl non velit semper placerat
                     vitae ut neque.
                     </p>
-                    <!-- <p class="text-white-50 mb-3 text-left">
-                    </p> -->
                 </div>
-                <!-- <div class="headshot">
-                     <div class="headshot" id="myImage"></div>
-                </div> -->
             </div>
             <div class="container d-flex h-25 align-items-end">
                 <div class="mx-auto text-center skills mt-1" id="scroll">
@@ -223,7 +222,7 @@
             <h1 class="text-left text-uppercase heads mb-2">Projects</h1>
             <div class="row">
                 <div class="wrapper container mb-3 mt-3">
-                    <div class="row container each pt-4 pb-3 px-5">
+                    <div class="row container each pt-3 pb-2 px-5">
                         <div class="container project-headings" onclick="expandFunction(0)">
                             <div class="img webapp ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Advanced Encryptor</h4>
@@ -234,19 +233,13 @@
                         <div id="home_security" class="container project-description minimize">
                             <div class="description text-justify">
                                 <ul>
-                                    <li>This project is a part of <em>Computer Design Course</em> (CS 362) of UIC from <em>Fall 2019</em>
-                                        Semester.
-                                    </li>
-                                    <li>This was a group project of three members. </li>
-                                    <li>The main idea of the project was to design and create a prototype of home security system.</li>
-                                    <li>The prototype is able to detect threats which could take place in a house in your absence.</li>
-                                    <li>Potential threats which system could detect includes theft, invade, smoke, fire, gas andlights.</li>
-                                    <li>The system is protected by a password which is you need to set every time you enable the system.</li>
-                                    <li>The security system is coded in C++ on Arduino and other hardwares.</li>
+                                    <li>The product would be able to encrypt large amount of data which could be decrypted later when required.</li>
+                                    <li>Working in a group of two members, where I am responsible for front end and some of back end development.</li>
+                                    <li>The </li>
                                 </ul>
                             </div>
                         
-                            <div class="mb-4 ml-3">
+                            <!-- <div class="mb-4 ml-3">
                                 <p class="m-0 mb-1 p-0 text-left"><span class="fa fa-tools px-1 "></span>Hardware and Concepts used:</p>
                                 <div class="horizontal-scroll px-2">
                                     <a target="_blank" href="https://learn.sparkfun.com/tutorials/what-is-an-arduino/all">Arduino UNO (3)</a>
@@ -290,11 +283,11 @@
                                     <a href="http://bit.ly/2SY0FEQ" target="_blank">Project Presentation</a>
                                     <a href="http://bit.ly/2PrJo4V" target="_blank">Final Design Document</a>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     
-                    <div class="row container each pt-4 pb-3 px-5">
+                    <div class="row container each pt-3 pb-2 px-5">
                         <div class="container project-headings" onclick="expandFunction(1)">
                             <div class="img webapp ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">COVID-19 Tracker</h4>
@@ -365,7 +358,7 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-4 pb-3 px-5">
+                    <div class="row container each pt-3 pb-2 px-5">
                         <div class="container project-headings" onclick="expandFunction(2)">
                             <div class="img security ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Home Security System</h4>
@@ -435,7 +428,7 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-4 pb-3 px-5">
+                    <div class="row container each pt-3 pb-2 px-5">
                         <div class="container project-headings" onclick="expandFunction(3)">
                             <div class="img game ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Tic Tac Toe Game</h4>
@@ -505,7 +498,7 @@
                         </div>
                     </div>
 
-                    <div class="d-none row container each pt-4 pb-3 px-5">
+                    <div class="row container each pt-3 pb-2 px-5">
                         <div class="container project-headings" onclick="expandFunction(4)">
                             <div class="img game ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Rock Paper Scissors Game</h4>
@@ -575,7 +568,7 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-4 pb-3 px-5">
+                    <div class="row container each pt-3 pb-2 px-5">
                         <div class="container project-headings" onclick="expandFunction(5)">
                             <div class="img game ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Baccarat Game</h4>
@@ -645,7 +638,7 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-4 pb-3 px-5">
+                    <div class="row container each pt-3 pb-2 px-5">
                         <div class="container project-headings" onclick="expandFunction(6)">
                             <div class="img folder ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">More Projects</h4>
