--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@ Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-coming-so
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/coming-soon.min.css" rel="stylesheet">    
+    <link href="css/coming-soon.min.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163496746-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-163496746-1');
+    </script>
+
 
 </head>
 
