--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-coming-so
     <meta name="author" content="">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <meta name="google-site-verification" content="4NVr2JGiZTc1akpibiEpmsh9afnt5nRSaRHVdGnh2-k" />
+    <meta name="google-site-verification" content="Sr4gxvAfE7M5co0DMrSIi3cw-bxr51SrdWMwscUiIYk" />
 
     <title>In Development</title>
 
