--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                             <div class="img webapp ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Advanced Encryptor</h4>
                             <p class="duration ml-3">April 2020 - Present</p>
-                            <a href="https://www.github.com/akshantjain" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://akshantjain.github.io" target="_blank"><div class="img2 external"></div></a>
+                            <a href="https://github.com/Akshantjain/AdvancedEncryptor" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="http://akshantjain.me/AdvancedEncryptor/" target="_blank"><div class="img2 external"></div></a>
                             <a href="https://akshantjain.github.io" target="_blank"><div class="img2 paper"></div></a>
                         </div>
                         <div class="container project-description minimize">
@@ -260,7 +260,7 @@
                             <div class="img webapp ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">COVID-19 Tracker</h4>
                             <p class="duration ml-3">April - May 2020</p>
-                            <a href="https://www.github.com/akshantjain " target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Akshantjain/it202-big-project" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="https://akshantjain.github.io" target="_blank"><div class="img2 external"></div></a>
                         </div>
                         <div class="container project-description minimize">
@@ -281,7 +281,7 @@
                             <div class="img security ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Home Security System</h4>
                             <p class="duration ml-3">September - December 2019</p>
-                            <a href="https://www.github.com/akshantjain" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Akshantjain/Home-Security-System" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="container project-description minimize">
                             <div class="description text-justify">
@@ -351,8 +351,8 @@
                             <div class="img web ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Personal Website v1</h4>
                             <p class="duration ml-3">July - August 2019</p>
-                            <a href="https://www.github.com/akshantjain" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://akshantjain.github.io" target="_blank"><div class="img2 external"></div></a>
+                            <a href="https://github.com/Akshantjain/v1" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="http://akshantjain.me/v1/" target="_blank"><div class="img2 external"></div></a>
                         </div>
                         <div class="container project-description minimize">
                             <div class="description text-justify">
@@ -421,7 +421,7 @@
                             <div class="img game ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Tic Tac Toe Game</h4>
                             <p class="duration ml-3">November 2019</p>
-                            <a href="https://www.github.com/akshantjain" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Akshantjain/Tic-Tac-Toe-Game" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="container project-description minimize">
                             <div class="description text-justify">
@@ -441,7 +441,7 @@
                             <div class="img game ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Baccarat Game</h4>
                             <p class="duration ml-3">September 2019</p>
-                            <a href="https://www.github.com/akshantjain" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Akshantjain/Baccarat-Game" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="container project-description minimize">
                             <div class="description text-justify">
@@ -468,15 +468,6 @@
                         <div class="container project-description minimize">
                             <div class="description text-justify">
                                 <ul>
-                                    <li>This project is a part of <em>Computer Design Course</em> (CS 362) of UIC from <em>Fall 2019</em>
-                                        Semester.
-                                    </li>
-                                    <li>This was a group project of three members. </li>
-                                    <li>The main idea of the project was to design and create a prototype of home security system.</li>
-                                    <li>The prototype is able to detect threats which could take place in a house in your absence.</li>
-                                    <li>Potential threats which system could detect includes theft, invade, smoke, fire, gas andlights.</li>
-                                    <li>The system is protected by a password which is you need to set every time you enable the system.</li>
-                                    <li>The security system is coded in C++ on Arduino and other hardwares.</li>
                                 </ul>
                             </div>
                         </div>
@@ -497,7 +488,7 @@
     <!-- Experience Section -->
     <section id="experience" class="experience-section contents ">
         <div id="container" class="container-fluid">
-            <h1 class="text-left text-uppercase heads mb-3">Experience</h1>
+            <h1 class="text-left text-uppercase heads mb-3">Education <span style="font-size: 2.5rem;">&</span> Experience</h1>
         </div>
         <!-- <div class="container d-flex h-25 align-items-end">
             <div class="mx-auto text-center skills mt-1" id="scroll">
@@ -671,28 +662,9 @@
             </script>
         
         <!-- Custom scripts for this template -->
-        <script src="js/script.js"></script>
-        <script src="js/navbar.js"></script>
-
         <script type="text/javascript" src="js/skrollr.min.js"></script>
-        <script type="text/javascript">
-            skrollr.init({
-                forceHeight: false
-            });
-        </script>
 
-        <script src="js/projects.js"></script>
-        <script src="js/logochange.js"></script>
-
-        <script>
-            function resumein () {
-
-            }
-
-            function resumeout ()   {
-
-            }
-        </script>
+        <script src="js/script.js"></script>
 
     </section>
 
