--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
                 <h2 class="text-white mx-auto">Aspiring Software and Front End Developer</h2>
             </div>
         </div>
-        <div class="container d-flex h-25  pb-5 align-items-end" id="button-container">
+        <!-- <div class="container d-flex h-25  pb-5 align-items-end" id="button-container">
             <div class="mx-auto text-center" id="scroll">
                 <a href="#about" class="btn btn-primary js-scroll-trigger">
                     <span></span>
                     <p class="shining">about me</p>
                 </a>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <!-- About Section -->
@@ -143,20 +143,20 @@
                     </p>
                 </div>
             </div>
-            <div class="container d-flex h-25 align-items-end">
+            <!-- <div class="container d-flex h-25 align-items-end">
                 <div class="mx-auto text-center skills mt-1" id="scroll">
                     <a href="#skills" class="btn btn-primary bg-transparent js-scroll-trigger">
                         <span></span>
                         <p class="shining mb-3">Coursework & Skills</p>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
     <!-- Coursework & Skills Section -->
-    <section id="skills" class="skill-section contents" data-0="background-position:0px -1080px;" data-100000="background-position:0px -10000px;">
-        <div id="skrollr-body" class="container-fluid">
+    <section id="skills" class="skill-section contents">
+        <div class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Courserowk and Skills</h1>
             <div class="row m-auto">
                 <div class="wrapper mb-4 mt-3">
@@ -216,20 +216,20 @@
                     </div>
                 </div>
             </div>
-            <div class="container d-flex h-25 align-items-end">
+            <!-- <div class="container d-flex h-25 align-items-end">
                 <div class="mx-auto text-center skills mt-1" id="scroll">
                     <a href="#projects" class="btn btn-primary bg-transparent js-scroll-trigger">
                         <span></span>
                         <p class="shining">Projects</p>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="projects-section contents" data-0="background-position:0px 0px;" data-100000="background-position:0px -10000px;">
-        <div id="skrollr-body" class="container-fluid">
+    <section id="projects" class="projects-section contents">
+        <div class="container-fluid">
             <h1 class="text-left text-uppercase heads mb-2">Projects</h1>
             <div class="row">
                 <div class="wrapper container mb-3 mt-3">
@@ -474,21 +474,21 @@
                     </div>
                 </div>
             </div>
-            <div class="container d-flex h-25 align-items-end" id="">
+            <!-- <div class="container d-flex h-25 align-items-end" id="">
                 <div class="mx-auto text-center skills mt-1" id="scroll">
                     <a href="#experience" class="btn btn-primary bg-transparent js-scroll-trigger">
                         <span></span>
                         <p class="shining">Experience</p>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
     <!-- Experience Section -->
     <section id="experience" class="experience-section contents ">
         <div id="container" class="container-fluid">
-            <h1 class="text-left text-uppercase heads mb-3">Education <span style="font-size: 2.5rem;">&</span> Experience</h1>
+            <h1 class="text-left text-uppercase heads mb-3">Education & Experience</h1>
         </div>
         <!-- <div class="container d-flex h-25 align-items-end">
             <div class="mx-auto text-center skills mt-1" id="scroll">
@@ -662,7 +662,7 @@
             </script>
         
         <!-- Custom scripts for this template -->
-        <script type="text/javascript" src="js/skrollr.min.js"></script>
+        <!-- <script type="text/javascript" src="js/skrollr.min.js"></script> -->
 
         <script src="js/script.js"></script>
 
