--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
             <h1 class="text-left text-uppercase heads mb-2">Projects</h1>
             <div class="row">
                 <div class="wrapper container mb-3 mt-3">
-                    <div class="row container each pt-3 pb-2 px-5">
-                        <div class="container project-headings" onclick="expandFunction(0)">
+                    <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(0)">
+                        <div class="container">
                             <div class="img webapp ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Advanced Encryptor</h4>
                             <p class="duration ml-3">April 2020 - Present</p>
@@ -231,8 +231,8 @@
                         </div>
                     </div>
                     
-                    <div class="row container each pt-3 pb-2 px-5">
-                        <div class="container project-headings" onclick="expandFunction(1)">
+                    <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(1)">
+                        <div class="container">
                             <div class="img webapp ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">COVID-19 Tracker</h4>
                             <p class="duration ml-3">April - May 2020</p>
@@ -252,8 +252,8 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-3 pb-2 px-5">
-                        <div class="container project-headings" onclick="expandFunction(2)">
+                    <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(2)">
+                        <div class="container">
                             <div class="img security ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Home Security System</h4>
                             <p class="duration ml-3">September - December 2019</p>
@@ -322,8 +322,8 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-3 pb-2 px-5">
-                        <div class="container project-headings" onclick="expandFunction(3)">
+                    <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(3)">
+                        <div class="container">
                             <div class="img web ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Personal Website v1</h4>
                             <p class="duration ml-3">July - August 2019</p>
@@ -392,8 +392,8 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-3 pb-2 px-5">
-                        <div class="container project-headings" onclick="expandFunction(4)">
+                    <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(4)">
+                        <div class="container">
                             <div class="img game ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Tic Tac Toe Game</h4>
                             <p class="duration ml-3">November 2019</p>
@@ -412,8 +412,8 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-3 pb-2 px-5">
-                        <div class="container project-headings" onclick="expandFunction(5)">
+                    <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(5)">
+                        <div class="container">
                             <div class="img game ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">Baccarat Game</h4>
                             <p class="duration ml-3">September 2019</p>
@@ -436,8 +436,8 @@
                         </div>
                     </div>
 
-                    <div class="row container each pt-3 pb-2 px-5">
-                        <div class="container project-headings" onclick="expandFunction(6)">
+                    <div class="row container each pt-3 pb-2 px-5 clickable-section" onclick="expandFunction(6)">
+                        <div class="container">
                             <div class="img folder ml-4 mr-4"></div>
                             <h4 class="font-weight-light pl-2 d-inline-block" style="margin: 0px;">More Projects</h4>
                         </div>
